Refine skill runtime and request handling